feat: add progress and body weight handlers and services
